--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "autoload": {
         "psr-4": {
             "Corelia\\": "core/",
-            "App\\": "app/"
+            "App\\": "app/",
+            "Modules\\": "modules/"
         }
     }
 
